# claude-wp-cli

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
cli/: _safety.py  comments.py  fields.py  main.py  media.py  menus.py  meta.py  pages.py  plugins.py  posts.py  publish.py  schema.py  search.py  settings.py  taxonomy.py  users.py  widgets.py
client/: auth.py  comments.py  fields.py  guards.py  http.py  media.py  menus.py  meta.py  pages.py  plugins.py  posts.py  schema.py  search.py  seo_router.py  settings.py  taxonomy.py  users.py  widgets.py
converter/: markdown.py
docs/: wp-cli-complete-spec.md
models/: config.py  loader.py
scripts/: manage_pages.py  manage_posts.py  manage_taxonomy.py  push_schema.py  update_fields.py  upload_media.py
sites_template/: config.yaml
tests/: test_auth.py  test_guards.py  test_http.py  test_meta.py  test_security.py  test_seo_router.py
